--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,32 @@ local.properties
 .recommenders
 
 .project
-.class
 .classpath
 
+# Java build files
+/build/
+/out/
+/target/
+*.class
+
 Servers/
-build/classes/
+
+# Java/JSP 로그 파일
+*.log
+
+# Maven Wrapper
+.mvn/
+!/.mvn/wrapper/maven-wrapper.jar
+
+# Gradle Wrapper
+.gradle/
+build/
+
+# 배포 산출물 (war, ear)
+*.war
+*.ear
+
+
 
 # External tool builders
 .externalToolBuilders/
